# sea-fork

./: .gitignore  README.md  pyproject.toml
src/: train.py
src/data/: data.py  dataset.py  samplers.py  utils.py
src/model/: aggregator.py  utils.py
src/sea/: args.py
src/sea/cdt/: __init__.py
src/sea/cdt/utils/: R.py
src/sea/data/: __init__.py  data.py  dataset.py  samplers.py  utils.py
src/sea/gies/: main.py  utils.py
src/sea/model/: aggregator.py  metrics.py
src/sea/train/: __init__.py  train.py
