[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sea"
version = "0.1.0"
description = "Sample, estimate, aggregate (SEA): causal discovery foundation models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - see repository for details." }
authors = [
  { name = "Khushi Desai", email = "khushipdesai@gmail.com" },
]
keywords = ["causal-discovery", "causal-inference", "deep-learning", "foundation-models"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.23,<2.0",
  "pandas",
  "tqdm",
  "pyyaml",
  "matplotlib",
  "seaborn",
  "torch==1.13.1",
  "torchvision==0.14.1",
  "torchaudio==0.13.1",
  "pytorch-lightning==1.9.0",
  "torchmetrics==1.3.0",
  "causal-learn==0.1.3.7",
  "pulp==2.8.0",
  "wandb",
  "networkx",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "joblib",
  "GPUtil",
  "requests",
  "sempler",
]

[project.urls]
Homepage = "https://arxiv.org/abs/2402.01929"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sea-train = "train:main"
sea-inference = "inference:main"


